--- a/frontend/src/components/Login.module.css
+++ b/frontend/src/components/Login.module.css
@@ -175,6 +175,25 @@
 }
 
 @media (max-width: 480px) {
+  .login-page {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    
+    /* space from edges */
+    padding: 20px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .login-wrapper {
+    max-width: 100%;
+    border-radius: 12px;
+  }
 
   .login-image {
     display: none;
