--- a/frontend/src/components/Login.module.css
+++ b/frontend/src/components/Login.module.css
@@ -175,24 +175,18 @@
   }
 }
 
+/* For mobile phones */
 @media (max-width: 480px) {
   .login-page {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    
-    /* space from edges */
-    padding: 20px;
-
+    padding: 20px 0; 
     display: flex;
     justify-content: center;
     align-items: center;
   }
 
   .login-wrapper {
-    max-width: 100%;
+    width: 90%;
+    max-width: 400px;
     border-radius: 12px;
   }
 
@@ -202,5 +196,6 @@
 
   .login-container {
     border-radius: 12px;
+    padding: 30px; 
   }
 }
