--- a/frontend/src/components/SignUp.module.css
+++ b/frontend/src/components/SignUp.module.css
@@ -157,23 +157,13 @@
 /* For mobile phones */
 @media (max-width: 480px) {
   .signup-page {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-
-    /* space between form and screen edges */
-    padding: 20px;
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    padding: 20px 0; 
   }
 
   .signup-wrapper {
-    width: 100%;
-    max-width: calc(100% - 40px); 
+    width: 90%; 
+    max-width: 400px;
+    flex-direction: column;
   }
 
   .signup-image {
@@ -181,6 +171,8 @@
   }
 
   .signup-container {
+    flex: 1; 
     border-radius: 12px;
+    padding: 30px; 
   }
 }
