updated signup css

--- a/frontend/src/components/SignUp.module.css
+++ b/frontend/src/components/SignUp.module.css
@@ -164,6 +164,8 @@
     width: 90%; 
     max-width: 400px;
     flex-direction: column;
+    padding: 20px;
+    margin-bottom: 60px; 
   }
 
   .signup-image {
@@ -174,6 +176,5 @@
     flex: 1; 
     border-radius: 12px;
     padding: 30px; 
-    margin-bottom: 30px; 
   }
 }
