--- a/frontend/src/components/Login.module.css
+++ b/frontend/src/components/Login.module.css
@@ -188,8 +188,8 @@
     width: 90%;
     max-width: 400px;
     border-radius: 12px;
-    padding: 20px;
     margin-bottom: 100px;
+    box-sizing: border-box;
   }
 
   .login-image {
